<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.courses.FirstCourseFragment">


   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical">

      <ImageView
          android:id="@+id/imageView2"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:src="@drawable/various_recycling_bins" />

      <ScrollView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:clipToPadding="false">


          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

              <TextView
                  android:id="@+id/recycle_intro"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:text="@string/recycle_par1" />

              <TextView
                  android:id="@+id/editTextTextPersonName"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:ems="10"
                  android:inputType="textPersonName"
                  android:text="@string/recycle_title_plastic"
                  android:textSize="20sp"
                  android:textStyle="bold" />

              <TextView
                  android:id="@+id/recycle_plastic"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:text="@string/recycle_plastic" />

              <Button
                  android:id="@+id/button4"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/add_tasks" />

              <TextView
                  android:id="@+id/editTextTextPersonName4"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:ems="10"
                  android:inputType="textPersonName"
                  android:text="@string/recycle_title_glass"
                  android:textSize="20sp"
                  android:textStyle="bold" />

              <TextView
                  android:id="@+id/recycle_glass"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:text="@string/recycle_glass" />

              <Button
                  android:id="@+id/button5"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/add_tasks" />

              <TextView
                  android:id="@+id/editTextTextPersonName5"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:ems="10"
                  android:inputType="textPersonName"
                  android:text="@string/recycle_title_paper"
                  android:textSize="20sp"
                  android:textStyle="bold" />

              <TextView
                  android:id="@+id/recycle_paper"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:text="@string/recycle_paper" />

              <Button
                  android:id="@+id/button6"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/add_tasks" />

              <TextView
                  android:id="@+id/editTextTextPersonName6"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:ems="10"
                  android:inputType="textPersonName"
                  android:text="@string/recycle_title_metal"
                  android:textSize="20sp"
                  android:textStyle="bold" />

              <TextView
                  android:id="@+id/recycle_metal"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:text="@string/recycle_metal" />

              <Button
                  android:id="@+id/button7"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/add_tasks" />

              <TextView
                  android:id="@+id/editTextTextPersonName7"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:ems="10"
                  android:inputType="textPersonName"
                  android:text="@string/recycle_title_batteries"
                  android:textSize="20sp"
                  android:textStyle="bold" />

              <TextView
                  android:id="@+id/recycle_batteries"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:text="@string/recycle_batteries" />

              <Button
                  android:id="@+id/button8"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/add_tasks" />


              <TextView
                  android:id="@+id/editTextTextPersonName8"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:ems="10"
                  android:inputType="textPersonName"
                  android:text="@string/recycle_title_appliances"
                  android:textSize="20sp"
                  android:textStyle="bold" />

              <TextView
                  android:id="@+id/recycle_appliances"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:text="@string/recycle_appliances" />

              <Button
                  android:id="@+id/button10"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/add_tasks" />

              <TextView
                  android:id="@+id/editTextTextPersonName9"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:ems="10"
                  android:inputType="textPersonName"
                  android:text="@string/recycle_title_hazardous"
                  android:textSize="20sp"
                  android:textStyle="bold" />

              <TextView
                  android:id="@+id/recycle_hazardous"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:text="@string/recycle_hazardous" />

              <Button
                  android:id="@+id/button11"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/add_tasks" />

              <TextView
                  android:id="@+id/editTextTextPersonName10"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:ems="10"
                  android:inputType="textPersonName"
                  android:text="@string/recycle_title_medical"
                  android:textSize="20sp"
                  android:textStyle="bold" />

              <TextView
                  android:id="@+id/recycle_medical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:text="@string/recycle_medical" />

              <Button
                  android:id="@+id/button12"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/add_tasks" />

              <TextView
                  android:id="@+id/editTextTextPersonName11"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:ems="10"
                  android:inputType="textPersonName"
                  android:text="@string/recycle_title_biodegradable"
                  android:textSize="20sp"
                  android:textStyle="bold" />

              <TextView
                  android:id="@+id/recycle_biodegradable"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:text="@string/recycle_biodegradable" />

              <Button
                  android:id="@+id/button13"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/add_tasks" />

              <TextView
                  android:id="@+id/editTextTextPersonName12"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:ems="10"
                  android:inputType="textPersonName"
                  android:text="@string/recycle_title_reusable"
                  android:textSize="20sp"
                  android:textStyle="bold" />

              <TextView
                  android:id="@+id/recycle_reusable"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:text="@string/recycle_reusable" />


              <Button
                  android:id="@+id/button15"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/add_tasks" />

              <TextView
                  android:id="@+id/editTextTextPersonName13"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:ems="10"
                  android:inputType="textPersonName"
                  android:text="@string/recycle_title_construction"
                  android:textSize="20sp"
                  android:textStyle="bold" />

              <TextView
                  android:id="@+id/recycle_construction"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:text="@string/recycle_construction" />

              <Button
                  android:id="@+id/button16"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/add_tasks" />

              <TextView
                  android:id="@+id/editTextTextPersonName14"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:ems="10"
                  android:inputType="textPersonName"
                  android:text="@string/recycle_title_household"
                  android:textSize="20sp"
                  android:textStyle="bold" />

              <TextView
                  android:id="@+id/recycle_household"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:text="@string/recycle_household" />
          </LinearLayout>
      </ScrollView>

   </LinearLayout>

</FrameLayout>