<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_page">


    <TextView
        android:id="@+id/welcome_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/come_to_the_green_side"
        android:textColor="@color/green_darker"
        android:textSize="24sp"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/welcome_joke"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:rotation="15"
        android:text="@string/p_s_we_have_vegan_n_cookies"
        android:textColor="@color/purple_500"
        android:textSize="15sp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toBottomOf="@+id/add_new_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_for_cookies" />

    <EditText
        android:id="@+id/input_new_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        app:layout_constraintEnd_toEndOf="@+id/welcome_register"
        app:layout_constraintStart_toStartOf="@+id/welcome_register"
        app:layout_constraintTop_toBottomOf="@+id/welcome_register" />

    <EditText
        android:id="@+id/input_new_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        app:layout_constraintEnd_toEndOf="@+id/input_new_username"
        app:layout_constraintStart_toStartOf="@+id/input_new_username"
        app:layout_constraintTop_toBottomOf="@+id/input_new_username"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/input_new_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        app:layout_constraintEnd_toEndOf="@+id/input_new_name"
        app:layout_constraintStart_toStartOf="@+id/input_new_name"
        app:layout_constraintTop_toBottomOf="@+id/input_new_name"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/input_new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        app:layout_constraintEnd_toEndOf="@+id/input_new_email"
        app:layout_constraintStart_toStartOf="@+id/input_new_email"
        app:layout_constraintTop_toBottomOf="@+id/input_new_email"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/add_new_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/register_new_user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_new_password"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_for_cookies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="186dp" />

</androidx.constraintlayout.widget.ConstraintLayout>